2018-05-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tt_cmap.c: Revert a part of changes in 2017-12-09,
	which breaks to give tounicode entries for ligatures.
	http://tug.org/pipermail/tex-live/2018-May/041608.html.
	* configure.ac: Version 20180506.

2018-04-28  Stefan Br\"uns  <stefan.bruens@rwth-aachen.de>

	* pngimage.c: Fix a bug which causes a segfault with 1/2/4-bit
	transparent indexed PNGs.
	* configure.ac: Version 20180428.

2018-03-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xbb.c: Remove unused lines.

2018-03-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* epdf.c, pdfobj.c, pdfobj.h: Remove multiple warnings.

2018-03-01  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* pdfobj.c: Fix typo and improve a warning (incomplete fix).

2018-02-17  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cid.c, dpxfile.[ch], dvipdfmx.c, epdf.c, jp2image.c,
	jpegimage.c, pdfcolor.c, pdfencoding.c, pdfencrypt.c,
	pdflimits.h, pdfobj.[ch], pdfximage.c, pngimage.c,
	spc_dvips.c, spc_pdfm.c, spc_tpic.c, type0.c, xbb.c:
	Accept PDF version tag 2.0.
	* numbers.[ch], tfm.c: Remove format specific number
	representation from numbers.[ch].
	* configure.ac: Version 20180217.

2018-01-27  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* tfm.c, number.[ch]: Support new JFM spec (3-byte characters
	in TYPE > 0).

2017-12-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* jpegimage.c: If j_info->xdpi and j_info->ydpi are not
	determined in JPEG_scan_file(), they are assumed to be 72.0.

2017-12-09  Jiang Jiang  <gzjjgod@gmail.com>

	* tt_cmap.c (is_PUA_or_presentation, add_to_cmap_if_used):
	Skip KANGXI RADICALs which are commonly double encoded.
	http://tug.org/pipermail/xetex/2017-June/027147.html

2017-10-02  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* dvi.c: Initialize direction mode in clear_state(). See
	https://github.com/texjporg/tex-jp-build/issues/30

2017-09-18  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
